--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   padding-left: 150px;
+  
 }
 
 .navbar .leftside img {
@@ -32,7 +33,76 @@
   margin: 20px;
 }
 
-@media screen and (max-width: 768px) {
+.navbar .rightside button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.navbar .rightside svg {
+  font-size: 40px;
+}
+
+.navbar #open {
+  padding-left: 0px;
+}
+.navbar #open img {
+  display: none;
+}
+
+.navbar #close img {
+  display: inherit;
+}
+
+.navbar #open .hiddenlinks {
+  display: inherit;
+  margin-left: 30px;
+}
+
+.navbar #close .hiddenlinks {
+  display: none;
+}
+
+.navbar #open a {
+  width: 70px;
+  margin: 5px;
+}
+@media only screen and (max-width: 900px) {
+  .navbar .rightside a {
+    width: 70px;
+  }
+  .navbar .leftside {
+    padding-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar .rightside a {
+    display: none;
+  }
+
+  .navbar .rightside {
+    justify-content: flex-end;
+    padding-right: 50px;
+  }
+
+  .navbar .rightside button {
+    display: inherit;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .navbar .rightside button {
+    display: none;
+  }
+
+  .hiddenlinks {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
     .navbar {
         flex-direction: column;
         height: auto;
